# FActScore

./: .gitignore  pyproject.toml
factscore/: atomic_facts.py  bedrock_lm.py  factscorer.py  retrieval.py
