[tool.poetry]
name = "factscore"
version = "0.0.1"
description = "FactScore for politifact dataset"
authors = ["David Tong <ytong82@berkeley.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
torch = "^1.13.0"
sentence-transformers = "^2.2.2"
transformers = "^4.29.2"
openai = "^0.27.7"
rank-bm25 = "^0.2.2"
spacy = "^3.5.3"
pysqlite-binary = "^0.5.0"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
